Solved issue with wrapping items in the sidebar navigation at 320px.

--- a/concho/sass/_theme.scss
+++ b/concho/sass/_theme.scss
@@ -817,6 +817,7 @@ h6,.h6{
 		//All li elements
 		li{
 			a{
+				display: block;
 				@include rem(padding, 10px 50px 10px 15px);
 				text-decoration: none;
 				width: 100%;
